--- a/scr/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/scr/WebApplication1/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container col-sm-12 col-md-12 col-lg-12" style="padding:40px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
